--- a/src/main/frontend/multi-pipeline-graph-view/multi-pipeline-graph/styles/MultiPipelineGraph.scss
+++ b/src/main/frontend/multi-pipeline-graph-view/multi-pipeline-graph/styles/MultiPipelineGraph.scss
@@ -1,4 +1,7 @@
 .pgv-stages__group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
   margin-top: 1rem;
 
   .pgv-stages__heading {
